zonenames match the pop file

--- a/data/zonenames.yaml
+++ b/data/zonenames.yaml
@@ -8,7 +8,7 @@
 - Angus
 - Antrim
 - Ards
-- Argyll & Bute
+- Argyll and Bute
 - Armagh
 - Arun
 - Ashfield
@@ -18,16 +18,13 @@
 - Ballymena
 - Ballymoney
 - Banbridge
-- Barking & Dagenham
 - Barking and Dagenham
 - Barnet
 - Barnsley
 - Barrow-in-Furness
 - Basildon
-- Basingstoke & Deane
 - Basingstoke and Deane
 - Bassetlaw
-- Bath & North East Somerset
 - Bath and North East Somerset
 - Bedford
 - Belfast
@@ -52,7 +49,7 @@
 - Bridgend
 - Bridgnorth
 - Brighton and Hove
-- Bristol, City of
+- Bristol
 - Broadland
 - Bromley
 - Bromsgrove
@@ -101,7 +98,6 @@
 - Craigavon
 - Craven
 - Crawley
-- Crewe & Nantwich
 - Crewe and Nantwich
 - Croydon
 - Dacorum
@@ -117,7 +113,7 @@
 - Dover
 - Down
 - Dudley
-- Dumfries & Galloway
+- Dumfries and Galloway
 - Dundee City
 - Dungannon
 - Durham
@@ -140,13 +136,13 @@
 - Eastbourne
 - Eastleigh
 - Eden
-- Edinburgh, City of
+- Edinburgh
 - Eilean Siar
-- Ellesmere Port & Neston
+- Ellesmere Port and Neston
 - Elmbridge
 - Enfield
 - Epping Forest
-- Epsom & Ewell
+- Epsom and Ewell
 - Epsom and Ewell
 - Erewash
 - Exeter
@@ -172,7 +168,6 @@
 - Hackney
 - Halton
 - Hambleton
-- Hammersmith & Fulham
 - Hammersmith and Fulham
 - Harborough
 - Haringey
@@ -185,12 +180,10 @@
 - Havant
 - Havering
 - Herefordshire
-- Herefordshire, County of
 - Hertsmere
 - High Peak
 - Highland
 - Hillingdon
-- Hinckley & Bosworth
 - Hinckley and Bosworth
 - Horsham
 - Hounslow
@@ -203,13 +196,11 @@
 - Isles of Scilly
 - Islington
 - Kennet
-- Kensington & Chelsea
 - Kensington and Chelsea
 - Kerrier
 - Kettering
-- King's Lynn and West Norfolk
-- Kings Lynn & West Norfolk
-- Kingston upon Hull, City of
+- Kings Lynn and West Norfolk
+- Kingston upon Hull
 - Kingston upon Thames
 - Kirklees
 - Knowsley
@@ -252,7 +243,6 @@
 - N IRELAND
 - Neath Port Talbot
 - New Forest
-- Newark & Sherwood
 - Newark and Sherwood
 - Newcastle upon Tyne
 - Newcastle-under-Lyme
@@ -281,9 +271,7 @@
 - Northampton
 - Norwich
 - Nottingham
-- Nuneaton & Bedworth
 - Nuneaton and Bedworth
-- Oadby & Wigston
 - Oadby and Wigston
 - Oldham
 - Omagh
@@ -293,7 +281,7 @@
 - Pembrokeshire
 - Pendle
 - Penwith
-- Perth & Kinross
+- Perth and Kinross
 - Peterborough
 - Plymouth
 - Poole
@@ -303,14 +291,12 @@
 - Purbeck
 - Reading
 - Redbridge
-- Redcar & Cleveland
 - Redcar and Cleveland
 - Redditch
-- Reigate & Banstead
 - Reigate and Banstead
 - Renfrewshire
 - Restormel
-- Rhondda, Cynon, Taff
+- Rhondda Cynon Taf
 - Ribble Valley
 - Richmond upon Thames
 - Richmondshire
@@ -339,7 +325,6 @@
 - Sheffield
 - Shepway
 - Shetland Islands
-- Shrewsbury & Atcham
 - Shrewsbury and Atcham
 - Slough
 - Solihull
@@ -364,13 +349,11 @@
 - South Tyneside
 - Southampton
 - Southend
-- Southend-on-Sea
 - Southwark
 - Spelthorne
 - St Albans
 - St Edmundsbury
 - St Helens
-- St. Helens
 - Stafford
 - Staffordshire Moorlands
 - Stevenage
@@ -402,7 +385,6 @@
 - The Vale of Glamorgan
 - Three Rivers
 - Thurrock
-- Tonbridge & Malling
 - Tonbridge and Malling
 - Torbay
 - Torfaen
@@ -441,7 +423,6 @@
 - West Somerset
 - West Wiltshire
 - Westminster
-- Weymouth & Portland
 - Weymouth and Portland
 - Wigan
 - Winchester
